--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "body-parser": "1.19.0",
     "ejs": "3.0.1",
     "eslint": "6.8.0",
     "express": "4.17.1"
