--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "1.19.0",
     "ejs": "3.0.1",
     "eslint": "6.8.0",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "mongoose": "^5.8.11"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
