--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ejs": "3.0.1",
     "eslint": "6.8.0",
     "express": "4.17.1",
-    "mongodb": "3.5.2",
+    "mongodb": "^2.2.33",
     "mongoose": "^5.8.11"
   },
   "devDependencies": {
