--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "ejs": "3.0.1",
     "eslint": "6.8.0",
     "express": "4.17.1",
-    "mongodb": "^2.2.33",
+    "mongodb": "3.5.2",
     "mongoose": "^5.8.11"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
   },
-
   "keywords": []
 }
